<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_title_scene_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_scene_config"
                android:textSize="20dp"
                android:padding="15dp"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_scene_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/ll_title_scene_config"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0">

            <EditText
                android:id="@+id/et_scene_name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/shape_button_gray_f6"
                android:maxLines="1"
                android:hint="@string/tv_scene_name"
                android:layout_weight="1"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ll_group_address"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_scene_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:background="@drawable/shape_button_gray_f6">

            <androidx.recyclerview.widget.RecyclerView
                android:visibility="visible"
                android:id="@+id/rv_group_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

            <TextView
                android:id="@+id/tv_add_group_address"
                android:visibility="gone"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="170dp"
                android:layout_height="45dp"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/tv_add_group_ip"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:background="@drawable/selector_button_green"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_function"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_group_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:gravity="center"
            android:background="@drawable/shape_button_gray_f6">

            <LinearLayout
                android:id="@+id/ll_show_function"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/tv_function_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_function_name"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="|"/>

                <TextView
                    android:id="@+id/tv_function_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_function_value"/>

            </LinearLayout>

            <ImageView
                android:visibility="visible"
                android:id="@+id/iv_add"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/ic_add_disable" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/rl_function"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_confirm"
                android:layout_weight="0.5"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_confirm"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/selector_button_green"/>

            <TextView
                android:id="@+id/tv_cancel"
                android:layout_weight="0.5"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_cancel"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/selector_button_gray"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>