<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_group_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/ll_title_scene_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_title_group_address"
                android:textSize="20dp"
                android:padding="15dp" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/ll_group_address"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:layout_constraintTop_toBottomOf="@+id/ll_title_scene_config"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_bias="0"
            android:background="@drawable/shape_button_gray_f6">

            <com.banlap.smartexam.widget.SlideRecyclerView
                android:id="@+id/rv_group_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/ll_group_address"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="horizontal"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_add_group_address"
                android:visibility="visible"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="170dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/tv_add"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:background="@drawable/selector_button_green"/>


            <TextView
                android:layout_weight="1"
                android:id="@+id/tv_cancel"
                android:clickable="true"
                android:focusable="true"
                android:layout_width="170dp"
                android:layout_height="45dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                android:text="@string/tv_cancel"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold"
                android:gravity="center"
                android:background="@drawable/selector_button_gray"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>